
0.9.8e May 26, 2004
 * renamed variables in update_pkg_cache() to designate files (_f)
 * removed legacy parse_file_list()
 * initialized global_config->no_prompt and global_config->re_install
 * moved create_dir_structure() and gen_md5_sum_of_file() and to common.[ch]
 * created gen_pkg_file_name() and gen_pkg_url() functions
 * tightened up scope on some variables
 * pkg_action_show no longer uses a temp pkg_info_t, just 2 char *
 * updated FAQ, added question about mirroring and bash tab completion
 * moved create_dir_structure from configuration.[ch] to curl.[ch]
 * get compressed and uncompressed information from package log in
   get_installed_pkgs(), and updated transaction handler.
   Transaction report now shows correct sizes for removing packages as well as
   upgrading when package uncompressed sizes differ.
 * documentation updates
 * added check in lookup_pkg_dependencies() to see if ignore failed dependencies
   (--no-dep) was set, if so, actually ignore.
 * moved add_deps_to_trans() to transaction.c from action.c
 * moved pkg_info_t creation into init_pkg() function
 * compartmentalized package list creation and modification into init_pkg_list()
   and add_pkg_to_pkg_list() functions
 * added src/common.c and include/common.h for file and regex operations
 * don't exclude package for upgrade when one of it's dependencies is present
   in the exclude list, but is already installed
 * code updates
 * updated man page

0.9.8d May 02, 2004
 * makefile updates
 * misc code updates
 * updated translations
 * added Italian translation by Francesco Gigli (jaramir@slack.it)
 * --show-stats | -S to show download stats, inspired by Alexandre Zia (alexandre@erbio.widesoft.com.br)
 * example source entries for extra and testing package sets
 * set default URL to official slackware ftp in example.slapt-getrc
 * updated cmp_pkg_versions() for special case where # of version parts !=
   (fixes 3.8.1p1-i486-1 to 3.8p1-i486-1)